k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pern-todo-app
  namespace: pern-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pern-todo-app
  template:
    metadata:
      labels:
        app: pern-todo-app
    spec:
      containers:
      - name: server
        image: olgicaupcheva/pern-todo-app-server:latest
        ports:
        - containerPort: 8000
      - name: client
        image: olgicaupcheva/pern-todo-app-client:latest
        ports:
        - containerPort: 3000
