k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pern-todo-db
  namespace: pern-todo
spec:
  serviceName: pern-todo-db
  replicas: 1
  selector:
    matchLabels:
      app: pern-todo-db
  template:
    metadata:
      labels:
        app: pern-todo-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
