k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pern-todo-db
  namespace: pern-todo
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: pern-todo-db
  clusterIP: None
