k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-todo-ingress
  namespace: pern-todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pern-todo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pern-todo-app
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pern-todo-app
                port:
                  number: 3000
